--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ CLUSTER_HOST=krushimitradb.lw8eigi.mongodb.net
 FIREBASE_PROJECT_ID=your_firebase_project_id
 FIREBASE_PRIVATE_KEY=your_firebase_private_key
 FIREBASE_CLIENT_EMAIL=your_firebase_client_email
-
+GEMINI_API_KEY=AIzaSyB9D42GOeezcrEPQLMUvF4MmM3O6sJfmuw
 # Other configuration variables can be added here
