--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "get-ip": "node get-public-ip.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
-    "mongodb": "^6.19.0",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "mongodb": "^6.19.0",
     "node-cron": "^3.0.2",
     "winston": "^3.10.0"
   },
