--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "elevenlabs": "^1.59.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.19.0",
     "node-cron": "^3.0.2",
+    "node-fetch": "^2.7.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
