--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:plan": "node test-plan.js",
     "test:connections": "node test-multi-user-connections.js",
     "test:logging": "node test-logging.js",
-    "get-ip": "node get-public-ip.js"
+    "get-ip": "node get-public-ip.js",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -24,9 +25,12 @@
     "mongodb": "^6.19.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
+    "openai": "^6.9.1",
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.0",
+    "supertest": "^6.3.4"
   }
 }
