--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.19.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.11",
     "openai": "^6.9.1",
     "winston": "^3.10.0"
   },
