--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@sendgrid/mail": "^8.1.0",
+    "@sendgrid/mail": "^8.1.6",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "elevenlabs": "^1.59.0",
@@ -36,4 +37,3 @@
     "supertest": "^6.3.4"
   }
 }
-
