--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^2.7.0",
     "openai": "^6.9.1",
     "resend": "^6.5.2",
+    "twilio": "^5.12.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
@@ -38,4 +39,3 @@
     "supertest": "^6.3.4"
   }
 }
-
