--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^10.5.0",
     "mongodb": "^6.19.0",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
