--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "elevenlabs": "^1.59.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
+    "form-data": "^4.0.5",
     "fs": "^0.0.1-security",
     "google-auth-library": "^10.5.0",
+    "groq-sdk": "^0.37.0",
     "mongodb": "^6.19.0",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.7.0",
     "openai": "^6.9.1",
